--- a/Part0/0_6.md
+++ b/Part0/0_6.md
@@ -5,13 +5,15 @@ sequenceDiagram
     participant browser
     participant server
 
-    Note right of browser: Submits the form
+    Note right of browser: User submits the form
     Note right of browser: The browser updates and redraws the notes
 
     browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note_spa
-    activate server
-    server-->>browser: 201 Created
-    deactivate server
 
-    Note right of browser: The browser executes the callback 
+    Note right of browser:  Content_type: application/json
+
+    server -->> browser: 201 Created
+
+
+    Note right of browser: The browser executes the callback
 ```
